transfer GH page

--- a/html/css/archive.css
+++ b/html/css/archive.css
@@ -41,7 +41,7 @@
     resize: both;
     overflow: hidden;
     border: none;
-    border-radius: 15px;
+    border-radius: 15px 15px 0 15px;
 
 
     &::backdrop {
